fixed creatind and updating habits
