# docs/swagger.json
@@ -175,12 +175,12 @@
                 "summary": "Создать новую привычку",
                 "parameters": [
                     {
-                        "description": "HabitDto",
+                        "description": "CreateHabitDto",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/habits.HabitDto"
+                            "$ref": "#/definitions/habits.CreateHabitDto"
                         }
                     }
                 ],
@@ -227,12 +227,12 @@
                         "required": true
                     },
                     {
-                        "description": "HabitDto",
+                        "description": "UpdateHabitDto",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/habits.HabitDto"
+                            "$ref": "#/definitions/habits.UpdateHabitDto"
                         }
                     }
                 ],
@@ -458,6 +458,40 @@
                 }
             }
         },
+        "habits.CreateHabitDto": {
+            "type": "object",
+            "required": [
+                "color",
+                "firstDate",
+                "icon",
+                "name",
+                "repeatType"
+            ],
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "daysOfWeek": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "firstDate": {
+                    "description": "\"2025-06-28T00:00:00Z\"",
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "repeatType": {
+                    "type": "string"
+                }
+            }
+        },
         "habits.HabitCompletionDto": {
             "type": "object",
             "required": [
@@ -482,8 +516,6 @@
             "type": "object",
             "required": [
                 "color",
-                "daysOfWeek",
-                "desc",
                 "firstDate",
                 "icon",
                 "id",
@@ -519,6 +551,44 @@
                 },
                 "versionId": {
                     "type": "integer"
+                }
+            }
+        },
+        "habits.UpdateHabitDto": {
+            "type": "object",
+            "required": [
+                "color",
+                "firstDate",
+                "icon",
+                "id",
+                "name",
+                "repeatType"
+            ],
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "daysOfWeek": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "firstDate": {
+                    "description": "\"2025-06-28T00:00:00Z\"",
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "repeatType": {
+                    "type": "string"
                 }
             }
         },
